<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_public_channels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
            android:layout_height="match_parent"
            android:layout_weight="0">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/searchBar"
                android:layout_weight="1">

            </SearchView>

            <ImageButton
                android:layout_width="wrap_content"
...
                android:checked="true" />

            <CheckBox
                android:text="@string/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chkBoxData"
                android:layout_weight="1"
                android:onClick="onClickChk"
                android:checked="true" />

        </LinearLayout>
    </LinearLayout>
...
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/listViewChannels"
        android:layout_weight="1" />

    <TextView
        android:text="  "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
