...
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancelDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/btnSetDialog"
                android:layout_alignStart="@+id/btnSetDialog"
                android:layout_marginBottom="94dp"
                android:layout_weight="1" />

...
