...


    <ImageButton
        android:src="@drawable/ic_action_not_fav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/btnFav"
        android:background="@null"
        android:layout_weight="10"
        android:onClick="onClickBtnFav" />

</LinearLayout>
